...
  "X3ljw4": "12C3",
  "uyJsf6": "About",
  "F6pfE9": "Active",
  "YxQnI2": "Add a device",
  "WGtWJi": "Add another website field",
  "ujd9wF": "Add device",
  "5CpGUC": "Add Device",
  "XQMP/X": "Add file button",
  "acU3M2": "Add here your code...",
  "NeOuRn": "Add note",
  "QG96Yn": "Add note field",
  "okfPKT": "Add note input field",
  "OfSjU/": "Add Peer",
...
  "4lIp/g": "Choose the language of the app.",
  "S+S//o": "Choose your Blind Peer",
  "3wV73y": "City",
  "x1u7sQ": "Close Vault",
  "7VpPHA": "Confirm",
  "p2/GCq": "Confirm Password",
  "xGVfLh": "Continue",
  "zHqPdk": "Continue using Biometric Access",
  "1aC1s8": "Control how PearPass works and keep your vault secure.",
  "PiH3UR": "Copied!",
  "he3ygx": "Copy",
  "kyw3U+": "Copy and close",
  "lL9OsS": "Copy any password instantly with one tap.",
...
  "AVZ4a2": "Could not open settings",
  "JNCzPW": "Country",
  "d2p3C0": "Create a credit card",
  "sJqavB": "Create a custom element",
  "RLkF7A": "Create a login",
  "x1BeEX": "Create a new item",
  "mNBDLb": "Create a new vault",
  "wsDMn+": "Create a note",
  "kHopLp": "Create a safe password or passphrase",
  "23WiKE": "Create a Wi-Fi password",
  "cu9wpg": "Create an identity",
  "3Gqz9D": "Create Custom",
  "azkm6Q": "Create custom field",
  "cNtDYh": "Create Master Password",
  "BOqY23": "Create new",
  "LVG0PJ": "Create new folder",
  "eWEV9G": "Create new password",
  "7fWz9u": "Create New Vault",
  "y6FDcq": "Create your {0} by giving it a name.{1}",
  "rPHqeE": "Create your own entry with fully custom fields. ",
  "wPvFAD": "Creation date",
  "3cdTys": "Credit cards",
  "HKGpDR": "csv",
  "Pn2B7/": "Current password",
...
  "1QfxQT": "Dismiss",
  "aEJQ1o": "Don't forget your master password. It's the only way to access your vault. We can't help recover it. Back it up securely.",
  "SioF0z": "Driving license",
  "GUnKy/": "Driving license picture",
  "ePK91l": "Edit",
  "O3oNi5": "Email",
  "87uClH": "Email or username",
  "7zdE15": "Email or Username field",
  "KXJaww": "Email or username input field",
  "PaQ3df": "Enable",
  "Lb4X46": "Enable Autofill",
  "1l5rQZ": "Enable biometric authentication",
  "UmkoqA": "Enable PearPass as your autofill provider for instant sign-ins.",
  "/MU2Sw": "Enable the reminders to change your passwords",
  "ye4lsE": "Enable vibration feedback when interacting with the app",
  "EHh0pv": "Encrypt and store private notes or sensitive text.",
  "lYGfRP": "English",
  "u3RJx6": "Enter Master Password",
  "PeALvN": "Enter Name",
  "JxXP1G": "Enter Password",
  "FC1I2X": "Enter Vault password",
  "SlfejT": "Error",
  "K8OsvQ": "Error adding Blind Peers",
  "eaF61c": "Error opening settings",
  "7mHzRk": "Error removing all Blind Peers",
  "zgMP9Q": "ERROR: Authentication failed",
  "yykJVO": "ERROR: Feedback not sent",
...
  "5paXFa": "Insert city",
  "4Km0yF": "Insert country",
  "k14aMg": "Insert email",
  "oQXquh": "Insert Master password",
  "7g8rC1": "Insert numbers",
  "z/0RYy": "Insert old password",
  "3aIkEo": "Insert password",
  "zGEl6x": "Insert phone number",
  "O681Fc": "Insert region",
  "OrC771": "Insert vault key...",
  "3q9GJU": "Insert Vault’s password",
  "yPCpoT": "Insert Wi-Fi Name",
  "VM/DjS": "Insert Wi-Fi Password",
  "QMXO01": "Insert your nationality",
  "xz/FXZ": "Insert ZIP",
  "5tT0+u": "Invalid email format",
  "csWCFv": "Invalid password",
...
  "B9m+g6": "Manage autofill settings",
  "W9bKW6": "Manage the password that protects your app.",
  "yhKLIc": "Manual Blind Peers",
  "rqpVn1": "Manual Blind Peers enabled successfully",
  "3JhoAJ": "Manual Blind Peers: ",
  "NgLxbu": "Mark as favorite",
  "xvo56c": "Master password",
  "NhTCxY": "Master Password",
  "gTW1/G": "Master Vault",
  "2xqMiM": "Maximum file size: {MAX_FILE_SIZE_MB} MB.",
  "ia4TsE": "Media Library",
  "SnlN3D": "MM YY",
  "rrK/fH": "Move to another folder",
...
  "737KzD": "No Folder",
  "C9B0e4": "No one can unlock your data, <0>not even us.</0> Your data stays <1>fully encrypted and local</1> to your device. <2>Keep your master password safe,</2> because if you lose it, it's gone forever.",
  "I3J0WD": "No QR code found in the image",
  "BoXCZj": "No records found to import!",
  "I8c+Bm": "No result found.",
  "sJn7b5": "No text found in clipboard",
  "VKcC6l": "No title",
  "KiJn9B": "Note",
  "PggZzL": "Note is required",
  "N67B4Z": "Note: Avoid common words and personal information.",
  "1DBGsz": "Notes",
  "5amVCg": "Now you can enter you master password once again!",
  "PjvmrJ": "Number (0-9)",
...
  "ZNu5ZG": "Reminders enabled",
  "uDbQPV": "Remove from Favorites",
  "cT5ddl": "Remove Peer",
  "xWJRRp": "Repeat new password",
  "qnWTIR": "Repeat Vault password",
  "hV3yAb": "Report a problem",
  "tfDRzk": "Save",
  "eakZUv": "Save a Recovery phrase",
  "jOP/wN": "Save your username and password for any website or app.",
  "ovB7m2": "Scan QR Code",
  "dZe6oD": "Scan the QR code or paste the vault key from the PearPass app on your other device to connect it to your account. This method keeps your account secure.",
  "7H1/nW": "Scan the QR-Code to connect to the Wi-Fi",
  "9/0r8w": "Scan this QR code or paste the vault key into the PearPass app on your other device to connect it to your account. This method keeps your account secure.",
  "mRm1Eu": "Scan this QR code while in the PearPass App",
  "uDwRxX": "Search field",
  "hBW+8M": "Search field icon",
  "xhZAMM": "Search field input",
  "YIix5Y": "Search...",
  "TxUSQb": "Securely store app recovery phrases.",
  "62zzRh": "Securely store card number, expiry date, and CVV.",
  "a3LDKx": "Security",
  "wLmRnI": "Security code",
  "rG3WVm": "Select",
  "mCB6Je": "Select All",
...
  "65A04M": "Spanish",
  "xbfh0J": "Special character",
  "LTYdTA": "Special Character (! @ # $...)",
  "i6k7Of": "Special character toggle",
  "2akpHQ": "Start fresh with a new vault or import an existing one to continue.",
  "Fvb3x/": "Store more than passwords",
  "hQRttt": "Submit",
  "9sfgQI": "Symbols",
  "gMEkUk": "Symbols toggle",
  "vHFFhm": "Sync your encrypted vault securely with blind peers to improve availability and consistency. Blind peers cannot read your data.",
  "RqQJa2": "Sync, without the Cloud",
  "EHu0x2": "Syncing",
  "tn75hC": "Take Photo",
  "Emv+V7": "Terms of use",
  "eqLGmS": "The first thing to do is create a Master password to secure your account.  You'll use this password to access PearPass. ",
  "rVvqPG": "The selected vault contain no records to export",
  "MgMqW4": "These are the devices currently synced with this vault.",
  "35yF9Q": "This collection is empty.",
  "MHrjPM": "Title",
  "6P1iPM": "Title field",
  "KDEp5x": "Title input field",
  "9udQT9": "Title is required",
  "tniYMG": "Toggle password visibility",
  "yXNZu8": "Too many failed attempts.",
...
