...
      {tabs}
      <Text
        style={styles.qrCodeTitle}
      >{t`Scan this QR code while in the PearPass App`}</Text>
      <View style={styles.qrCodeContainer}>
        {svg.length > 0 && (
          <SvgXml testID="qr-code" xml={svg} width="100%" height="100%" />
        )}
      </View>
      <View style={styles.expireContainer}>
        <Text style={styles.expireText}>
          {t`Expires in`} {expireTime}
        </Text>
...
              height={14}
              color={colors.primary400.mode1}
            />
            <Text style={styles.copyAccountTitle}>{t`Copy vault key`}</Text>
          </View>
          <Text
            testID="copy-address"
            style={[styles.copyAddress, isCopied && styles.copyAddressCopied]}
            numberOfLines={1}
            ellipsizeMode="tail"
          >
            {isCopied ? t`Copied!` : data?.publicKey}
          </Text>
...
