...
        <ButtonThin
          onPress={addDevice}
          startIcon={AccountCircleOutlined}
          testID="sidebar-add-device-button"
          textTestID="sidebar-add-device-text"
        >
          {t`Add Device`}
        </ButtonThin>

        <ButtonThin
          onPress={closeVault}
          startIcon={Logout}
          testID="sidebar-close-vault-button"
...
