...
      })
  }

  return (
    <OnboardingLayout
      showLogo={false}
      rightAction={{ label: t`Not now`, onPress: goToNext }}
      topGradient
    >
      <View style={styles.container}>
        <View style={styles.topSection}>
          <View style={styles.riveContainer}>
            <Rive
...
            variant="primary"
            fullWidth
            onClick={handleEnableAutofill}
            iconBefore={<OpenInNew width={16} height={16} />}
            data-testid="onboarding-autofill-enable"
          >
            {t`Turn on Autofill`}
          </Button>
        </View>
      </View>
    </OnboardingLayout>
  )
}
...
