...
    >
      <View style={styles.searchWrapper}>
        <InputField
          label=""
          value={search}
          onChangeText={setSearch}
          placeholder={t`Search...`}
          testID="import-codes-match-search"
        />
      </View>

      <View
        style={{
...
