appId: com.pears.pass
---
- runFlow: passwordEnter.yaml
- assertVisible: "Create a new vault"
- tapOn: "Create a new vault"
- assertVisible: "Create New Vault"
- tapOn: "Enter Name"
- inputText: "My protected vault"
- tapOn: "Set Vault Password"
- tapOn: "Enter vault password"
- inputText: "StrongVault#2026"
- tapOn: "Repeat vault password"
- inputText: "StrongVault#2026"
- tapOn: "Create New Vault"
- assertVisible: "This collection is empty."
