appId: com.pears.pass
---
- runFlow: ../welcome/vaultCreate.yaml
- assertVisible:
    id: "logo-lock"
- tapOn:
    id: "logo-lock"
- assertVisible: "Add Device"
- tapOn: "Add Device"
- assertVisible:
    id: "qr-code"
- assertVisible:
    id: "copy-address"
