appId: com.pears.pass
---
- runFlow: ../welcome/vaultCreateProtected.yaml
- assertVisible:
    id: "logo-lock"
- tapOn:
    id: "logo-lock"
- assertVisible: "Add Device"
- tapOn: "Add Device"
- assertVisible: "Insert Vault’s password"
- tapOn: "Enter Vault password"
- inputText: 1234
- tapOn: "Submit"
- assertVisible:
    id: "qr-code"
- assertVisible:
    id: "copy-address"

