appId: com.pears.pass
---
- runFlow: ../welcome/vaultSelect.yaml
- assertVisible:
    id: "button-create-record"
- tapOn:
    id: "button-create-record"
- assertVisible:
    id: "record-item-login"
- tapOn:
    id: "record-item-login"
- assertVisible:
    text: "No title"
- tapOn:
    text: "No title"
- inputText: "Test record"
- hideKeyboard
- tapOn:
    text: "Email or username"
- inputText: "test@example.com"
- hideKeyboard
- tapOn:
    text: "Insert password"
- inputText: "Password!23"
- hideKeyboard
- tapOn:
    text: "Save"
- assertVisible: 
    text: "Search..."
- assertVisible: 
    text: "Test record"
