appId: com.pears.pass
---
- launchApp
- assertVisible: "Master password"
- tapOn: "Master password"
- inputText: "Password!23"
- hideKeyboard
- tapOn: "Continue"
- assertVisible: "Create a new vault"
