appId: com.pears.pass
---
- runFlow: passwordEnter.yaml
- assertVisible: "Create a new vault"
- tapOn: "Create a new vault"
- assertVisible: "Create New Vault"
- tapOn: "Enter Name"
- inputText: "My Vault"
- tapOn: "Create New Vault"
- assertVisible: "This collection is empty."
