appId: com.pears.pass
---
- clearState
- launchApp
- assertVisible: "Continue"
- tapOn: "Continue"
- tapOn: "Continue"
- assertVisible: "Create Master password"
- tapOn: "Enter Master Password"
- inputText: "Password!23"
- tapOn: "Repeat Master Password"
- inputText: "Password!23"
- "hideKeyboard"
- tapOn: "Continue"
- assertVisible: "Turn on Autofill"
- tapOn: "Not now"
- tapOn: "Not now"
- assertVisible: "Search..."
- killApp
